<resources>
    <string name="systemBarPersent">100%</string>
    <string name="app_name">CPPK</string>
    <string name="set_datetime">Установить дату и время</string>
    <string name="rfid_test">Тест карты</string>
    <string name="barcode_title">Штрихкод</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="get_fw">Get Fw</string>
    <string name="scan">Scan</string>
    <string name="test">Тест</string>
    <string name="sync_time_on_connect">Синхронизировать время\nпри подключении ПТК к\nАРМ \"Загрузка данных\"</string>
    <string name="permlab_setTime">Установка времени</string>
    <string name="permdesc_setTime">Позволяет пользователю самому установить время</string>
    <string name="BSC">БСК</string>
    <string name="change_button">Изменить</string>
    <string name="attempts_limit_is_exceeded">Вы исчерпали лимит попыток</string>
    <string name="bring_bsc">Поднесите БСК\nк считывателю</string>
    <string name="and_hold_to_success">и удерживайте до\nуспешного удаления\nПД с БСК</string>
    <string name="error">Ошибка</string>
    <string name="attention">Внимание</string>
    <string name="barcode_howto">Чек разместить дальше 8 см и ближе 16 см от сканера.\n
        Светить зелёным светом на нижний штрихкод.\n Перпендикулярно плоскости чека.\n
        Чек не болтать.</string>
    <string name="pin">ПИН-код</string>
    <string name="surname">Фамилия</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="main_menu_transfer_from">от %1$s</string>
    <string name="titleSell">Оформление</string>
    <string name="PD">ПД</string>
    <string name="tools">Багаж</string>
    <string name="readBarcodeBtn">Штрихкод</string>
    <string name="readRfidButton">БСК</string>
    <string name="settingsButton">Меню</string>
    <string name="open_shift">Открыть смену</string>
    <string name="begin_work">Начать работу</string>
    <string name="common_menu_dialog_backup_attention_message">Вы действительно\nхотите создать\nрезервную копию?</string>
    <string name="common_menu_dialog_backup_attention_yes">Да</string>
    <string name="common_menu_dialog_backup_attention_no">Нет</string>
    <string name="common_menu_dialog_backup_completed_message">Резервная копия\nсоздана\n%1$s</string>
    <string name="common_menu_dialog_backup_completed_ok">Ок</string>
    <string name="device_collection_item_empty_name">неизвестное устройство</string>
    <string name="direction_there">Туда</string>
    <string name="direction_back">Обратно</string>
    <string name="direction_there_back">Туда - Обратно</string>
    <string name="shift">"Смена: "</string>
    <string name="allert_confirm_PD">Укажите билет, по которому осуществляется проезд</string>
    <string name="rfid_result_no_ticket_for_transfer_msg">На карте отсутствует исходный ПД, к которому может быть оформлен трансфер</string>
    <string name="rfid_result_no_ticket_for_transfer_ok_btn">Закрыть</string>
    <string name="result_barcode_no_ticket_for_transfer_msg">К ПД не может быть оформлен трансфер</string>
    <string name="result_barcode_no_ticket_for_transfer_ok_btn">Закрыть</string>
    <string name="read_barcode">Наведите\nсканер\nна штрихкод</string>
    <string name="read_barcode_faild_title_2">не удалось.</string>
    <string name="fail_read_from_bsc">Информация с БСК\nне читается</string>
    <string name="fail_read_frim_barcode">Штрихкод не может\nбыть считан.</string>
    <string name="sale_pd">Оформить новый ПД</string>
    <string name="barcode_read_rules">Почему не читается</string>
    <string name="read_pd_error_title_2_pd">Неправильный ПД</string>
    <string name="exec_read_bsc">Идет считывание БСК,\nпожалуйста, не убирайте карту</string>
    <string name="control">Контроль</string>
    <string name="repeat_read">Повторить считывание</string>
    <string name="action_is_not_avaliable">Действие недоступно</string>
    <string name="splash_version">Версия %1$s</string>
    <string name="splash_emergency_mode">Аварийный режим</string>
    <string name="splash_msg_bring_card">Для авторизации\nподнесите карту доступа\nк считывателю</string>
    <string name="splash_msg_disabling_status_bar">Проверка системных\nразрешений\nПодождите\u2026</string>
    <string name="splash_msg_no_root">Недостаточно прав</string>
    <string name="splash_msg_init_eds_error">Ошибка инициализации ЭЦП</string>
    <string name="splash_msg_init_eds_progress">Инициализация ЭЦП\nПодождите\u2026</string>
    <string name="splash_msg_update_cache_progress">Кеширование данных\nПодождите\u2026</string>
    <string name="splash_auth_btn">Авторизоваться</string>
    <string name="splash_repeat_btn">Повторить</string>
    <string name="splash_msg_invalid_time_zone">Некорректный\nчасовой пояс</string>
    <string name="splash_msg_invalid_device_id">Обнаружено несанкционированное\nизменение настроек.\nЗапуск невозможен</string>
    <string name="splash_msg_invalid_nsi">Некорректная\nверсия НСИ,\nсинхронизируйте ПТК</string>
    <string name="splash_msg_invalid_security">Некорректная версия\nбазы безопасности,\nсинхронизируйте ПТК</string>
    <string name="splash_msg_lock_more_than_one_day">Более суток</string>
    <string name="splash_msg_time_to_unlock">ПТК заблокирован\nДо разблокировки осталось\n%1$s</string>
    <string name="splash_msg_default_init_error">Ошибка инициализации</string>
    <string name="Exit">Выход</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="not_found">Не найдено</string>
    <string name="Other">Прочие</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="create_report">Формирование отчетности</string>
    <string name="info_service">Статистика</string>
    <string name="uchet_lenti">Учет билетной ленты</string>
    <string name="devices">Устройства</string>
    <string name="countChange">Рассчитать сдачу</string>
    <string name="menu_fine_sale">Взимание штрафа</string>
    <string name="canselPD">Аннулировать ПД</string>
    <string name="closeShift">Закрыть смену</string>
    <string name="printNotSendDocsSheet">Отчет о непереданных ФД</string>
    <string name="close_pos_terminal_day">Закрыть день на POS-терминале</string>
    <string name="sendDocsToOfd">Отправка документов в ОФД</string>
    <string name="closeMonth">Закрыть месяц</string>
    <string name="logout">Выйти</string>
    <string name="backup">Резервное копирование</string>
    <string name="sell_pd_for_last_shift">Статистика продаж за последнюю смену</string>
    <string name="check_pd_for_last_shift">Статистика проверок ПД за последнюю смену</string>
    <string name="check_ett_for_last_shift">Статистика проверок ЭТТ за последнюю смену</string>
    <string name="tariffs">Маршруты и тарифы</string>
    <string name="updates_ptk">Статистика обновлений ПТК</string>
    <string name="statistics_update_version">Версия</string>
    <string name="passenger_train">Пассажирский</string>
    <string name="fast_train">Скорый</string>
    <string name="full_pd">Полный</string>
    <string name="kids_pd">Детский</string>
    <string name="set_success_sound">Изменить звук удачного считывания</string>
    <string name="set_fail_sound">Изменить звук НЕудачного считывания</string>
    <string name="syncQuestion">Синхронизировать?</string>
    <string name="settings_menu_progress_printing_not_sent_docs">Печать отчета о непереданных в ОФД документах</string>
    <string name="default_str"> — </string>
    <string name="db_info">Базы данных</string>
    <string name="current_version_title">Текущая - </string>
    <string name="new_version_title">Новая - </string>
    <string name="settings_control_detail_config_train_category">Настроить категорию поезда\nконтроля</string>
    <string name="settings_control_detail_config_transfer_route">Настроить маршрут трансфера</string>
    <string name="user_data">Посмотреть данные пользователя</string>
    <string name="wifi_settings">Настройка Wi-Fi</string>
    <string name="settings_sound">Настроить звук</string>
    <string name="delete_app">Удалить приложение</string>
    <string name="start_file_manager">Запустить файл-менеджер</string>
    <string name="start_cpchdkcone">Запустить CpcHdkCone</string>
    <string name="save">Сохранить</string>
    <string name="really_exit">Выйти?</string>
    <string name="really_exit_to_emergensy_mode">Выйти в аварийный режим?</string>
    <string name="transfer_selling_possibility">Доступность оформления трансфера</string>
    <string name="control_type_mode">Режим контроля</string>
    <string name="control_type_mode_train">в поезде</string>
    <string name="control_type_mode_bus">в автобусе</string>
    <string name="train_category">Категория поезда контроля</string>
    <string name="train_6000">6000</string>
    <string name="train_7000">7000</string>
    <string name="menu">Меню</string>
    <string name="enter_pin">Введите ПИН-код</string>
    <string name="pin_validation">Идёт проверка…</string>
    <string name="pin_error_message">Неверный пин или Ошибка ЭЦП\nПопробуйте еще раз.</string>
    <string name="attempt_count">Количество оставшихся\nпопыток:</string>
    <string name="empty_pin">Значение ПИН-кода\nсодержит некорректные\nданные.</string>
    <string name="error_msg_ticket_tape_is_not_set">Билетная лента\nне установлена</string>
    <string name="print_test_pd">Напечатать пробный ПД</string>
    <string name="readImage">Прочитать образ</string>
    <string name="writeImage">Записать образ</string>
    <string name="clearMarkUltralight">Очистить метку прохода с Ultralight (C/Ev1) (v5)</string>
    <string name="setTrashToPassageMarkUltralight">Мусор в метку прохода Ultralight (C/Ev1) (FF)</string>
    <string name="setPassageMarkV5ToUltralight">Записать метку прохода v5 Ultralight (C/Ev1)</string>
    <string name="readPassageMarkFromUltralightC">Прочитать метку Ultralight (C/Ev1)</string>
    <string name="writeUlPd">Записать ПД на Ultralight</string>
    <string name="readCard">Прочитать карту</string>
    <string name="repeal_title">Аннулирование</string>
    <string name="executed_pd">Оформленные ПД</string>
    <string name="accounting_ticket_tape">Учет билетной ленты</string>
    <string name="print_start_report">Напечатать отчет\nустановки билетной ленты</string>
    <string name="ticket_tape_series">Серия (00000ХХ)</string>
    <string name="ticket_tape_number">Номер (№000000)</string>
    <string name="dialog_incorrect_day_code_try_again">Попробуйте еще раз.</string>
    <string name="reports_test_PD">Пробный ПД</string>
    <string name="reports_test_shift_sheet">Пробная сменная ведомость</string>
    <string name="reports_shift_sheet">Сменная ведомость</string>
    <string name="reports_discount_shift_sheet">Льготная сменная ведомость</string>
    <string name="reports_sales_for_ett_log">Журнал оформления по ЭТТ</string>
    <string name="reports_terminal_operations">Отчёт по операциям POS-терминала</string>
    <string name="reports_terminal_day_close">Отчёт о закрытии дня на POS-терминале</string>
    <string name="reports_audit_taril">Контрольный журнал</string>
    <string name="reports_audit_taril_shift">Вся смена</string>
    <string name="reports_hint_audit_taril_period">ДД:ММ:ГГГГ ЧЧ:ММ</string>
    <string name="reports_hint_audit_taril_period_from">c</string>
    <string name="reports_hint_audit_taril_period_to">по</string>
    <string name="reports_audit_taril_period">Период</string>
    <string name="reports_hint_shift_number">Номер смены</string>
    <string name="reports_hint_shift_date">Дата смены</string>
    <string name="reports_print_control_journal">Печать контрольного журнала</string>
    <string name="terminal_next">Продолжить</string>
    <string name="ticket_tape_is_not_set_view_cancel_btn">Отмена</string>
    <string name="ticket_tape_is_not_set_view_set_ticket_tape_btn">Установить ленту</string>
</resources>