<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/enter_pin_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingBottom="@dimen/enter_pin_additional_bottom_pading_for_error_layout"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/voskl_znak_height_little"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:padding="@dimen/voskl_znak_padding"
            android:src="@drawable/icon_failed" />

        <TextView
            android:id="@+id/enter_pin_is_empty"
            style="@style/enter_pin_error_view"
            android:text="@string/empty_pin" />

        <TextView
            android:id="@+id/enter_pin_is_empty_try_again"
            style="@style/enter_pin_error_view"
            android:text="@string/dialog_incorrect_day_code_try_again" />

        <TextView
            android:id="@+id/enter_pin_error_message"
            style="@style/enter_pin_error_view"
            android:text="@string/pin_error_message" />

        <TextView
            android:id="@+id/enter_pint_count_attempt"
            style="@style/enter_pin_error_view"
            android:text="@string/attempt_count" />
    </LinearLayout>

    <TextView
        style="@style/titles"
        android:text="@string/pin" />

    <EditText
        android:id="@+id/pin_enter"
        style="@style/edit_text_style"
        android:hint="@string/enter_pin"
        android:inputType="numberPassword" />

    <RelativeLayout
        android:id="@+id/validationProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar1"
            android:layout_centerHorizontal="true"
            android:text="@string/pin_validation" />
    </RelativeLayout>

</LinearLayout>